src/imports/controls/fusion/qtquickcontrols2fusionstyleplugin.cpp
@@ -71,6 +71,9 @@ void QtQuickControls2FusionStylePlugin::registerTypes(const char *uri)
 {
     QQuickStylePlugin::registerTypes(uri);
 
+    if (!QQuickTheme::instance())
+        return;
+
     theme.initialize(QQuickTheme::instance());
 }
 
