src/imports/controls/imagine/qtquickcontrols2imaginestyleplugin.cpp
@@ -72,6 +72,9 @@ void QtQuickControls2ImagineStylePlugin::registerTypes(const char *uri)
 {
     QQuickStylePlugin::registerTypes(uri);
 
+    if (!QQuickTheme::instance())
+        return;
+
     theme.initialize(QQuickTheme::instance());
 }
 
